crates/editor-codec-macros/tests/compile_fail/tuple_variant_not_frozen.stderr
error: tuple variant payloads must be #[durable(frozen)]
 --> tests/compile_fail/tuple_variant_not_frozen.rs:7:5
  |
7 | /     #[durable(n(0))]
8 | |     A(u64),
  | |__________^
